# chum_ai_full

./: README.md  a.avif  classification_records.csv  pyproject.toml  readData.py
